tests/errors/type_check/error_span/accumulate_statement_errors_in_one_block.err.expected
error: at 6:13: [TC-AssignmentTypeMismatch] In function 'f', block 'entry': Type mismatch in assignment. LHS is i64, RHS is bool
   |
 6 |             x = true;
   |             ^^^^^^^^
error: at 7:13: [TC-AssignmentTypeMismatch] In function 'f', block 'entry': Type mismatch in assignment. LHS is i64, RHS is bool
   |
 7 |             y = true;
   |             ^^^^^^^^
